<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <groupId>com.erliapp</groupId>
  <artifactId>utilities</artifactId>
  <version>0.0.3</version>
  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>


  <build>
    <defaultGoal>clean install</defaultGoal>
    <plugins>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <encoding>utf-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <relocations>
                <relocation>
                  <pattern>org.mariadb.jdbc</pattern>
                  <shadedPattern>com.erliapp.mariadb.jdbc</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.datastax</pattern>
                  <shadedPattern>com.erliapp.datastax</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.sqlite</pattern>
                  <shadedPattern>com.erliapp.sqlite</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.mysql.jdbc</pattern>
                  <shadedPattern>com.erliapp.mysql.jdbc</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.agentdid127.date</pattern>
                  <shadedPattern>com.erliapp.date</shadedPattern>
                </relocation>
              </relocations>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                    <exclude>META-INF/LICENSE</exclude>
                    <exclude>META-INF/MANIFEST.MF</exclude>
                    <exclude>META-INF/AL2.0</exclude>
                    <exclude>META-INF/LGPL2.1</exclude>
                    <exclude>META-INF/NOTICE</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>Date</artifactId>
      <groupId>com.github.agentdid127</groupId>
      <version>0.0.4</version>
    </dependency>
    <dependency>
      <artifactId>gson</artifactId>
      <groupId>com.google.code.gson</groupId>
      <version>2.10.1</version>
    </dependency>
    <dependency>
      <artifactId>sqlite-jdbc</artifactId>
      <groupId>org.xerial</groupId>
      <version>3.44.1.0</version>
    </dependency>
    <dependency>
      <artifactId>java-driver-query-builder</artifactId>
      <groupId>com.datastax.oss</groupId>
      <version>4.17.0</version>
    </dependency>
    <dependency>
      <artifactId>java-driver-core</artifactId>
      <groupId>com.datastax.oss</groupId>
      <version>4.17.0</version>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>8.2.0</version>
    </dependency>
    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
      <version>3.2.0</version>
    </dependency>

  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>jitpack</id>
      <url>https://jitpack.io</url>
    </pluginRepository>
    <pluginRepository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
    </pluginRepository>


  </pluginRepositories>

  <properties>
    <argLine>--add-modules java.base --add-opens java.base/sun.security.util=ALL-UNNAMED</argLine>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
    </repository>
    <repository>
      <id>jitpack</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>


</project>